--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+  ~ Copyright (C) 2014-2015 Oleg Kan, @Simplaapliko
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:orientation="vertical"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,5 +26,35 @@
                 tools:context="com.simplaapliko.util.sample.MainActivityFragment"
                 tools:showIn="@layout/activity_main">
 
+    <TextView
+        android:id="@+id/app_version"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/get_version"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/get_app_version" />
+
+    <Button
+        android:id="@+id/get_version_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/get_app_version_name" />
+
+    <Button
+        android:id="@+id/get_version_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/get_app_version_code" />
+
+    <Button
+        android:id="@+id/send_feedback"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/send_feedback" />
+
+</LinearLayout>
