--- a/util/src/main/res/values-ru/strings_feedback.xml
+++ b/util/src/main/res/values-ru/strings_feedback.xml
@@ -16,14 +16,14 @@
   -->
 
 <resources>
-    <string name="feedback_subject">Обратная связь</string>
-    <string name="feedback_dialog_intent_chooser_title">Что использовать?</string>
-    <string name="feedback_device">Устройство:</string>
-    <string name="feedback_android_version">Версия Android:</string>
-    <string name="feedback_app_version">Версия приложения:</string>
-    <string name="feedback_region">Язык / Регион:</string>
-    <string name="feedback_screen">Экран:</string>
-    <string name="feedback_screen_width">ширина:</string>
-    <string name="feedback_screen_height">высота:</string>
-    <string name="feedback_message">Напишите разработчику о проблеме или предложении.\nСпасибо!\n_____</string>
+    <string name="u_feedback_subject">Обратная связь</string>
+    <string name="u_feedback_dialog_intent_chooser_title">Что использовать?</string>
+    <string name="u_feedback_device">Устройство:</string>
+    <string name="u_feedback_android_version">Версия Android:</string>
+    <string name="u_feedback_app_version">Версия приложения:</string>
+    <string name="u_feedback_region">Язык / Регион:</string>
+    <string name="u_feedback_screen">Экран:</string>
+    <string name="u_feedback_screen_width">ширина:</string>
+    <string name="u_feedback_screen_height">высота:</string>
+    <string name="u_feedback_message">Напишите разработчику о проблеме или предложении.\nСпасибо!\n_____</string>
 </resources>
