--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -27,34 +27,16 @@
                 tools:showIn="@layout/activity_main">
 
     <TextView
-        android:id="@+id/app_version"
+        android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <Button
-        android:id="@+id/get_version"
+        android:id="@+id/get_screen_orientation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/get_app_version" />
-
-    <Button
-        android:id="@+id/get_version_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/get_app_version_name" />
-
-    <Button
-        android:id="@+id/get_version_code"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/get_app_version_code" />
-
-    <Button
-        android:id="@+id/send_feedback"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/send_feedback" />
+        android:text="@string/get_screen_orientation" />
 
 </LinearLayout>
