--- a/sample/src/main/res/layout/fragment_main.xml
+++ b/sample/src/main/res/layout/fragment_main.xml
@@ -24,7 +24,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.simplaapliko.util.sample.MainActivityFragment"
+    tools:context="com.simplaapliko.util.sample.MainFragment"
     tools:showIn="@layout/activity_main">
 
     <TextView
